; ModuleID = '/home/carl/AnghaBench/linux/tools/power/x86/turbostat/extr_turbostat.c_snapshot_cpu_lpi_us.c'
source_filename = "/home/carl/AnghaBench/linux/tools/power/x86/turbostat/extr_turbostat.c_snapshot_cpu_lpi_us.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [64 x i8] c"/sys/devices/system/cpu/cpuidle/low_power_idle_cpu_residency_us\00", align 1
@.str.1 = private unnamed_addr constant [2 x i8] c"r\00", align 1
@.str.2 = private unnamed_addr constant [5 x i8] c"%lld\00", align 1
@cpuidle_cur_cpu_lpi_us = common dso_local global i32 0, align 4
@stderr = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [37 x i8] c"Disabling Low Power Idle CPU output\0A\00", align 1
@BIC_CPU_LPI = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @snapshot_cpu_lpi_us() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = call i32* @fopen_or_die(i8* getelementptr inbounds ([64 x i8], [64 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0))
  store i32* %4, i32** %2, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = call i32 @fscanf(i32* %5, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.2, i64 0, i64 0), i32* @cpuidle_cur_cpu_lpi_us)
  store i32 %6, i32* %3, align 4
  %7 = load i32, i32* %3, align 4
  %8 = icmp ne i32 %7, 1
  br i1 %8, label %9, label %16

9:                                                ; preds = %0
  %10 = load i32, i32* @stderr, align 4
  %11 = call i32 @fprintf(i32 %10, i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str.3, i64 0, i64 0))
  %12 = load i32, i32* @BIC_CPU_LPI, align 4
  %13 = call i32 @BIC_NOT_PRESENT(i32 %12)
  %14 = load i32*, i32** %2, align 8
  %15 = call i32 @fclose(i32* %14)
  store i32 -1, i32* %1, align 4
  br label %19

16:                                               ; preds = %0
  %17 = load i32*, i32** %2, align 8
  %18 = call i32 @fclose(i32* %17)
  store i32 0, i32* %1, align 4
  br label %19

19:                                               ; preds = %16, %9
  %20 = load i32, i32* %1, align 4
  ret i32 %20
}

declare dso_local i32* @fopen_or_die(i8*, i8*) #1

declare dso_local i32 @fscanf(i32*, i8*, i32*) #1

declare dso_local i32 @fprintf(i32, i8*) #1

declare dso_local i32 @BIC_NOT_PRESENT(i32) #1

declare dso_local i32 @fclose(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
